fixed spacing and added new profile

--- a/css/resume.css
+++ b/css/resume.css
@@ -29,6 +29,10 @@ h6 {
   color: #343a40;
 }
 
+hr {
+  border-color: #ccc !important;
+}
+
 h1 {
   font-size: 6rem;
   line-height: 5.5rem;
@@ -58,8 +62,8 @@ p.lead {
   display: inline-block;
   height: 3.5rem;
   width: 3.5rem;
-  background-color: #495057;
-  color: #fff !important;
+  background-color: #9c260d;
+  color: #711c09 !important;
   border-radius: 100%;
   text-align: center;
   font-size: 1.5rem;
@@ -72,7 +76,7 @@ p.lead {
 }
 
 .social-icons a:hover {
-  background-color: #9c260d;
+  background-color: #bd5d38;
 }
 
 .dev-icons {
@@ -152,16 +156,24 @@ p.lead {
 section.resume-section {
   padding-top: 5rem !important;
   padding-bottom: 5rem !important;
-  max-width: 75rem;
+  /*max-width: 75rem; DEFAULT WAY*/
+  max-width:calc(100vw - 17rem);
 }
 
 section.resume-section .resume-item .resume-date {
   min-width: none;
 }
 
+@media (min-width: 200px) {
+  section.resume-section {
+    min-height: 100vh;
+    max-width: 75rem;
+  }
+
 @media (min-width: 768px) {
   section.resume-section {
     min-height: 100vh;
+    max-width: 75rem;
   }
   section.resume-section .resume-item .resume-date {
     min-width: 18rem;
@@ -172,6 +184,7 @@ section.resume-section .resume-item .resume-date {
   section.resume-section {
     padding-top: 3rem !important;
     padding-bottom: 3rem !important;
+    max-width:calc(100vw - 17rem);
   }
 }
 
